@@ -236,6 +236,7 @@
 @slsh/lib/cmdopt.sl
 @slsh/lib/readascii.sl
 @slsh/lib/process.sl
+@slsh/lib/setfuns.sl
 
 @slsh/lib/rline/editfuns.sl
 @slsh/lib/rline/emacskeys.sl
@@ -255,6 +256,7 @@
 @slsh/lib/help/profile.hlp
 @slsh/lib/help/print.hlp
 @slsh/lib/help/process.hlp
+@slsh/lib/help/setfuns.hlp
 
 @slsh/lib/tm/Makefile
 @slsh/lib/tm/arrayfuns.tm
@@ -266,12 +268,14 @@
 @slsh/lib/tm/profile.tm
 @slsh/lib/tm/print.tm
 @slsh/lib/tm/process.tm
+@slsh/lib/tm/setfuns.tm
 
 @slsh/lib/test/test_cmdopt.sl
 @slsh/lib/test/test_structfuns.sl
 @slsh/lib/test/test_readascii.sl
 @slsh/lib/test/test_print.sl
 @slsh/lib/test/test_process.sl
+@slsh/lib/test/test_setfuns.sl
 
 @slsh/doc/tm/slsh.tm
 @slsh/doc/tm/Makefile
